# MiniSynthFM

./: .gitmodules  CMakeLists.txt  README.md
include/Kaixo/MiniSynthFM/: Controller.hpp  PresetData.hpp  PresetDatabase.hpp
include/Kaixo/MiniSynthFM/Gui/: Catenary.hpp  DisplayView.hpp  Led.hpp  MainView.hpp  PatchBay.hpp  Piano.hpp
include/Kaixo/MiniSynthFM/Gui/Panels/: DelayPanel.hpp  EnvelopePanel.hpp  FilterPanel.hpp  GainPanel.hpp  LfoPanel.hpp  MidiPanel.hpp  OperatorPanel.hpp
include/Kaixo/MiniSynthFM/Gui/Tabs/: ArpTab.hpp  LoadPresetTab.hpp  MainTab.hpp  PopupView.hpp  SavePresetTab.hpp  SettingsTab.hpp
include/Kaixo/MiniSynthFM/Processing/: ADSREnvelope.hpp  Arpeggiator.hpp  CustomFilter.hpp  Delay.hpp  FMOscillator.hpp  Interfaces.hpp  Lfo.hpp  Processor.hpp  Voice.hpp
presets/: 7th Addition.minifm  Acid Bass.minifm  Acid Party.minifm  Aftertaste.minifm  Amazed Bass.minifm  Anger Control.minifm  Anger Tanker.minifm  Beyond The Wall.minifm  Box Pipes.minifm  Broken Bell.minifm  Broken Glass.minifm  Broken Wub.minifm  Burning Land.minifm  Clear Glass.minifm  Convolution.minifm  Created Crack.minifm  Crying Tree.minifm  Cyberscape.minifm  Deep Matter.minifm  Discotheque.minifm  Dried Scream.minifm  Duck Wings.minifm  Echos Of Light.minifm  Exo Pluck.minifm  FM Plunge.minifm  Followup.minifm  Fragility.minifm  Gradual Decay.minifm  Heartbeat.minifm  High Pressure.minifm  Illegal Metals.minifm  Lead Pipes.minifm  Long Forgotten.minifm  Metal Bar.minifm  New Simplicity.minifm  Octave Rave.minifm  Patience.minifm  Pecker.minifm  Perfect Sync.minifm  Phased Baker.minifm  (+41 more)
resources/: Parameters.xml
source/Kaixo/MiniSynthFM/: Controller.cpp  PresetData.cpp  PresetDatabase.cpp
source/Kaixo/MiniSynthFM/Gui/: Catenary.cpp  DisplayView.cpp  Led.cpp  MainView.cpp  PatchBay.cpp  Piano.cpp
source/Kaixo/MiniSynthFM/Gui/Panels/: DelayPanel.cpp  EnvelopePanel.cpp  FilterPanel.cpp  GainPanel.cpp  LfoPanel.cpp  MidiPanel.cpp  OperatorPanel.cpp
source/Kaixo/MiniSynthFM/Gui/Tabs/: ArpTab.cpp  LoadPresetTab.cpp  MainTab.cpp  PopupView.cpp  SettingsTab.cpp  (+1 more)
source/Kaixo/MiniSynthFM/Processing/: ADSREnvelope.cpp  Arpeggiator.cpp  CustomFilter.cpp  Delay.cpp  FMOscillator.cpp  Interfaces.cpp  Lfo.cpp  Processor.cpp  Voice.cpp
theme/: arp-tab-layout.pdn  layout backup.pdn  layout.pdn  layout2.pdn  layout3.pdn  map.json  schema.json  test-theme.minifmtheme  theme-as-json.json  theme.json  wheel.pdn
theme/blue-theme/: theme.minifmtheme
theme/fonts/: map.json  small-map.json
theme/knobs/: layout2.pdn  main-knob-bg-bi.pdn  main-knob-bg.pdn
theme/light-theme/: theme.minifmtheme
theme/main-theme/: main-theme.minifmtheme
theme/red-theme/: theme.minifmtheme
